test/typeerrors/Heuristics/UnifierIf.hs
-- test :: Int
test = if True then 3 else "hello"
